assets/css/style.css
/* ... */
@media (max-width: 749px){

    body{
        width: 80%;
    }

    header{
        width: 100%;
        height: 120px;
        padding: 0 10%;
    }

    header .nav-bar{
        justify-content: start;
        width: 100%;
    }
    
    .header .nav-bar-list-menu{
        width: 200px;
        height: 200px;
        display: flex;
        flex-direction: column;
        text-align: center;
    }

    header .nav-bar-list-menu ul{
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 100%;
        left: -6.8%;
        right: -14%;
        background-color: var(--body-bg);
        height: 100vh;
        transition-duration: .3;
    }

    header .nav-bar-list-menu ul li{
        padding-top: 50px;
        padding-left: 6%;
        padding-right: 6%;
        opacity: .95;
        font-size: 13px;
    }

    header .nav-bar-list-menu ul li::after{
        content: '';
        display: block;
        width: 100%;
        height: 1px;
        margin-top: 10px;
        opacity: .10;
        background-color: var(--black-white);
    }

    header .nav-bar .nav-bar-list{
        display: none;
    }

    header .nav-bar-list-menu-icon{
        display: block;
        cursor: pointer;
        padding: 13px;
        padding-left: 0;
    }

    header.page-down{
        height: 8%;
        background: var(--body-bg);
        box-shadow: 1px 1px 6px var(--shadow-box-scrol);
    }

    
    main{
        display: flex;
        padding-top: 90px;
        flex-wrap: wrap;
        justify-content: start;
        gap: 0;
    }

    main .profile{
        display: flex;
        flex-wrap: wrap;
        flex-direction: column-reverse;
    }

    main .profile .names h1{
        font-size: 28px;
    }

    main .profile .names h2{
        font-size: 15px;
        opacity: .8;
    }

    main .profile .names p{
        font-size: 12px;
    }

    main .profile img{
        width: 80px;
        height: 80px;
        margin-bottom: 20px;
        border: none;
    }

    main .social-button{
        width: 100%;
        height: 50px;
        gap: 5%;
    }

    main .social-button button{
        width: 140px;
        height: 50px;
        font-size: 13px;
        gap: 10%;
        border: double 2px transparent;
    }

    main .social-button button svg{
        width: 20px;
    }

    main .swipe-down{
        padding-top: 30px;
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: end;
    }

    main .swipe-down a svg{
        margin-top: 10px;
        width: 12px;
    }

    main .about-me p{
        margin-left: 0;
        font-size: 13px;
        width: 100%;
    }

    main .about-me h2{
        font-size: 53px;
    }

    main .about-me h2::after, main .projects h2::after, main .skills h2::after{
        height: 6px;
        bottom: 6%;
    }

    main .about-me p{
        margin-top: 20px;
    }

    main .projects h2{
        font-size:57px;
    }

    main .projects ul li{
        width: 270px;
        height: 140px;
    }

    main .projects ul li a .project-details{
        height: 35%;
        display: grid;
        grid-template-rows: 1fr 2fr;
        grid-template-columns: 2fr 1fr;
        grid-template-areas: 
        "h3 techs"
        "p techs";
        justify-items: flex-start;
        align-items: flex-start;
        padding: 0 5px;
    }

    main .projects ul li a .project-details .techs{
        grid-area: techs;
        display: flex;
    }

    main .projects ul li a .project-details .techs h3{
        grid-area: h3;
        font-size: 14px;
    }

    main .projects ul li a .project-details .techs p{
        grid-area: p;
        font-size: 11px;
    }

    main .projects ul li a .project-details .techs span{
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
        margin-top: 5px;
        grid-area: span;
        font-size: 12px;
        padding: 2px 6px;
    }

    main .skills{
        padding: 40px 0;
        text-align: start;
    }

    main .skills h2{
        font-size: 45px;
        margin-bottom: 30px;
    }

    main .skills h2::after{
        bottom: -2px;
    }

    main .skills .container-skills{
        row-gap: 40px;
        flex-wrap: wrap;
        margin-top: 60px;
        justify-content: flex-start;
    }

    main .skills .container-skills ul{
        width: 65%;
    }

    main .skills .container-skills ul p{
        font-size: 12px;
    }

    main .skills .container-skills ul li span{
        font-size: 10px;
    }


    main .skills .container-skills ul li svg{
        width: 35px;
        height: 35px;
    }

    body footer{
        height: auto;
        margin-top: 90px;
        text-align: center;
    }

    body footer h2, body footer a{
        font-size: 11px;
    }

}

